==> SimonGAndrews/Espruino/targets/esp32/jshardware.c <==
#include <stdio.h>
#include <sys/time.h>
#include "jshardware.h"
#include "jshardwareUart.h"
#include "jshardwareAnalog.h"
#include "jshardwarePWM.h"
#include "jshardwarePulse.h"
#include "rtosutil.h"
#include "driver/timer.h"
#include "BLE/esp32_gap_func.h"
#include "BLE/esp32_gattc_func.h"
#include "BLE/esp32_gatts_func.h"
#include "jshardwareESP32.h"
#include "jsutils.h"
#include "jstimer.h"
#include "jsparse.h"
#include "jsinteractive.h"
#include "jspininfo.h"
#include "jswrap_esp32_network.h"
#include "soc/uart_reg.h"
#include "esp_mac.h"
#include "esp_attr.h"
#include "esp_wifi.h"
#include "esp_system.h"
#include "esp_task_wdt.h"
#include "rom/ets_sys.h"
#include "rom/uart.h"
#include "driver/gpio.h"
#include "soc/gpio_sig_map.h"
#include "esp_flash.h"
#include "soc/gpio_reg.h"
#include "esp_spi_flash.h"
#include "jshardwareI2c.h"
#include "jshardwareSpi.h"
#define FLASH_MAX (4*1024*1024) //4MB
#define FLASH_PAGE_SHIFT 12 // Shift is much faster than division by 4096 (size of page)
#define FLASH_PAGE ((uint32_t)1<<FLASH_PAGE_SHIFT)  //4KB
#define UNUSED(x) (void)(x)

void jshInit() {
  if(ESP32_Get_NVS_Status(ESP_NETWORK_WIFI)) esp32_wifi_init();
#ifdef BLUETOOTH
  if(ESP32_Get_NVS_Status(ESP_NETWORK_BLE)) gattc_init();
#endif
  jshInitDevices();
  BITFIELD_CLEAR(jshPinSoftPWM);
  if (JSHPINSTATE_I2C != 13 || JSHPINSTATE_GPIO_IN_PULLDOWN != 6 || JSHPINSTATE_MASK != 15) {
    jsError("JshPinState #defines have changed, please update pinStateToString()");
  }
  gpio_isr_register(gpio_intr_handler,NULL,0,NULL);  //changed to automatic assign of interrupt
  // Initialize something for each of the possible pins.
  jshPinDefaultPullup();
}

void jshReset() {
  jshResetDevices();
  jshPinDefaultPullup() ;
//  UartReset();
  RMTReset();
  ADCReset();
  SPIReset();
  I2CReset();
#ifdef BLUETOOTH
  if(ESP32_Get_NVS_Status(ESP_NETWORK_BLE)) gatts_reset(false);
#endif
}

bool jshSleep(JsSysTime timeUntilWake) {
#if ESP_IDF_VERSION_MAJOR>=4
  double ms = jshGetMillisecondsFromTime(timeUntilWake);
  if (ms>50) ms=50; // hack for now - ideally jshHadEvent called from UART IRQs would break out of vTaskDelay
  vTaskDelay(ms / portTICK_PERIOD_MS);
#else
  UNUSED(timeUntilWake);
  // we never sleep in older IDFs
#endif
  return true;
}

void jshDelayMicroseconds(int microsec) {
  ets_delay_us((uint32_t)microsec);
}

void jshPinSetState(
  Pin pin,                 //!< The pin to have its state changed.
    JshPinState state        //!< The new desired state of the pin.
  ) {
  /* Make sure we kill software PWM if we set the pin state
   * after we've started it */
  if (BITFIELD_GET(jshPinSoftPWM, pin)) {
    BITFIELD_SET(jshPinSoftPWM, pin, 0);
    jstPinPWM(0,0,pin);
  }
  gpio_mode_t mode;
  gpio_pull_mode_t pull_mode=GPIO_FLOATING;
  bool negated = pinInfo[pin].port & JSH_PIN_NEGATED;
  switch(state) {
  case JSHPINSTATE_GPIO_OUT:
    mode = GPIO_MODE_INPUT_OUTPUT;
    break;
  case JSHPINSTATE_GPIO_IN:
    mode = GPIO_MODE_INPUT;
    break;
  case JSHPINSTATE_GPIO_IN_PULLUP:
    mode = GPIO_MODE_INPUT;
    pull_mode= negated ? GPIO_PULLDOWN_ONLY : GPIO_PULLUP_ONLY;
    break;
  case JSHPINSTATE_GPIO_IN_PULLDOWN:
    mode = GPIO_MODE_INPUT;
    pull_mode= negated ? GPIO_PULLUP_ONLY : GPIO_PULLDOWN_ONLY;
    break;
  case JSHPINSTATE_GPIO_OUT_OPENDRAIN:
    mode = GPIO_MODE_INPUT_OUTPUT_OD;
    if (negated) jsError( "jshPinSetState: can't do Open Drain on negated pin");
    break;
  case JSHPINSTATE_GPIO_OUT_OPENDRAIN_PULLUP: // not possible if negated
    mode = GPIO_MODE_INPUT_OUTPUT_OD;
    pull_mode= GPIO_PULLUP_ONLY;
    if (negated) jsError( "jshPinSetState: can't do Open Drain on negated pin");
    break;
  default:
    jsError( "jshPinSetState: Unexpected state: %d", state);
  return;
  }
  gpio_num_t gpioNum = pinToESP32Pin(pin);
  gpio_set_direction(gpioNum, mode);
  gpio_set_pull_mode(gpioNum, pull_mode);
#if ESP_IDF_VERSION_MAJOR>=5
  esp_rom_gpio_pad_select_gpio(gpioNum);
#else
  gpio_pad_select_gpio(gpioNum);
#endif
  g_pinState[pin] = state; // remember what we set this to...
}

void jshPinSetValue(
    Pin pin,   //!< The pin to have its value changed.
    bool value //!< The new value of the pin.
  ) {
  if (pinInfo[pin].port & JSH_PIN_NEGATED) value=!value;
  gpio_num_t gpioNum = pinToESP32Pin(pin);
#if ESP_IDF_VERSION_MAJOR>=5
  gpio_iomux_out(gpioNum,SIG_GPIO_OUT_IDX,0);  // reset pin to be GPIO in case it was used as rmt or something else
#else
  gpio_matrix_out(gpioNum,SIG_GPIO_OUT_IDX,0,0);  // reset pin to be GPIO in case it was used as rmt or something else
#endif
  gpio_set_level(gpioNum, (uint32_t)value);
}

bool CALLED_FROM_INTERRUPT jshPinGetValue( // can be called at interrupt time
    Pin pin //!< The pin to have its value read.
  ) {
  gpio_num_t gpioNum = pinToESP32Pin(pin);
  bool value = gpio_get_level(gpioNum);
  if (pinInfo[pin].port & JSH_PIN_NEGATED) value=!value;
  return value;
}

bool CALLED_FROM_INTERRUPT jshGetWatchedPinState(IOEventFlags eventFlag) { // can be called at interrupt time
  gpio_num_t gpioNum = pinToESP32Pin((Pin)(eventFlag-EV_EXTI0));
  bool value = gpio_get_level(gpioNum);
  if (pinInfo[gpioNum].port & JSH_PIN_NEGATED) value=!value;
  return value;
}

IOEventFlags jshPinWatch(
      Pin pin,          //!< The pin to be watched.
      bool shouldWatch, //!< True for watching and false for unwatching.
      JshPinWatchFlags flags
    ) {
  gpio_num_t gpioNum = pinToESP32Pin(pin);
  if(shouldWatch){
    gpio_set_intr_type(gpioNum,GPIO_INTR_ANYEDGE);             //set posedge interrupt
    gpio_set_direction(gpioNum,GPIO_MODE_INPUT);               //set as input
    gpio_set_pull_mode(gpioNum,GPIO_PULLUP_ONLY);              //enable pull-up mode
    gpio_intr_enable(gpioNum);                                 //enable interrupt
    return pinToEV_EXTI(gpioNum);
  } else{
    if(gpio_intr_disable(gpioNum) == ESP_ERR_INVALID_ARG){     //disable interrupt
        jsError("*** jshPinWatch error");
    }
  }
  return EV_NONE;
}

void jshUSARTKick(IOEventFlags device) {
  int c = jshGetCharToTransmit(device);
  while(c >= 0) {
  switch(device){
#ifdef BLUETOOTH
    case EV_BLUETOOTH:
      gatts_sendNUSNotification(c);
      break;
#endif
    case EV_SERIAL1:
      uart_tx_one_char((uint8_t)c);
#ifdef CONFIG_IDF_TARGET_ESP32C3
      // The USB CDC UART on the C3 only writes the data to USB after a newline. Ensure uartTask in main.c knows to flush the UART next time
      extern void esp32USBUARTWasUsed();
      esp32USBUARTWasUsed();
#endif
      break;
    default:
      writeSerial(device,(uint8_t)c);
      break;
    //if(device == EV_SERIAL1) uart_tx_one_char((uint8_t)c);
    //else writeSerial(device,(uint8_t)c);
  }
    c = jshGetCharToTransmit(device);
  }
}

JsSysTime CALLED_FROM_INTERRUPT jshGetSystemTime() { // in us -- can be called at interrupt time
  struct timeval tm;
  portENTER_CRITICAL_ISR(&JSmicrosMux);
  gettimeofday(&tm, 0);
  portEXIT_CRITICAL_ISR(&JSmicrosMux);
  return (JsSysTime)(tm.tv_sec)*1000000L + tm.tv_usec;
}

void jshSetSystemTime(JsSysTime newTime) {
  struct timeval tm;
  struct timezone tz;

  tm.tv_sec=(time_t)(newTime/1000000L);
  tm.tv_usec=(suseconds_t) (newTime - tm.tv_sec * 1000000L);
  tz.tz_minuteswest=0;
  tz.tz_dsttime=0;
  settimeofday(&tm, &tz);
}

bool jshIsDeviceInitialised(IOEventFlags device) {
  uint64_t mask = 1ULL << (int)device;
  return (DEVICE_INITIALISED_FLAGS & mask) != 0L;

//  UNUSED(device);
//  jsError(">> jshIsDeviceInitialised not implemented");
// return 0;
}

void jshFlashRead(
    void *buf,     //!< buffer to read into
    uint32_t addr, //!< Flash address to read from
    uint32_t len   //!< Length of data to read
  ) {

  if(len == 1){ // Can't read a single byte using the API, so read 4 and select the byte requested
    uint word;
#if ESP_IDF_VERSION_MAJOR>=5
    esp_flash_read(NULL, addr & 0xfffffffc,&word,4);
#else
    spi_flash_read(addr & 0xfffffffc,&word,4);
#endif
    *(uint8_t *)buf = (word >> ((addr & 3) << 3 )) & 255;
  } else {
#if ESP_IDF_VERSION_MAJOR>=5
    esp_flash_read(NULL, addr, buf, len);
#else
    spi_flash_read(addr, buf, len);
#endif
  }
}

bool jshFlashGetPage(
    uint32_t addr,       //!<
    uint32_t *startAddr, //!<
    uint32_t *pageSize   //!<
  ) {
  if (addr >= FLASH_MAX) return false;
  *startAddr = addr & ~(FLASH_PAGE-1);
  *pageSize = FLASH_PAGE;
  return true;
}

size_t jshFlashGetMemMapAddress(size_t ptr) {
   // if ptr is high already, assume we know what we're accessing
  if (ptr > 0x10000000) return ptr;
  // romdata_storage is memory mapped address from the js_code partition in rom - targets/esp32/main.c
  extern char* romdata_storage;
  if (romdata_storage==0) {
    jsError("Couldn't find 'storage' partition - update with partition_espruino.bin\n");
    return 0;
  }
  // Flash memory access is offset to 0, so remove starting location as already accounted for
  return (size_t)&romdata_storage[ptr - FLASH_SAVED_CODE_START ];
}

unsigned int jshSetSystemClock(JsVar *options) {
  UNUSED(options);
  jsError(">> jshSetSystemClock Not implemented");
  return 0;
}
